extensions/wikia/WikiaPhotoGallery/css/WikiaPhotoGallery.editor.css
/* ... */
#WikiaPhotoGalleryEditor .WikiaPhotoGalleryOptionsColumn td {
	border: none;
	padding: 0 0 2px 0;
	vertical-align: middle;
	text-align: left;
}

#WikiaPhotoGalleryEditor .WikiaPhotoGalleryOptionsColumn .ui-slider {
	display: block;
	margin: 20px 0;
}

.WikiaPhotoGalleryOptionsColumn input[type="checkbox"],
.WikiaPhotoGalleryOptionsColumn select {
	vertical-align: middle;
}

.WikiaPhotoGalleryOptionsColumn label {
	margin: 0 20px 0 5px;
}

/* Feed checkbox */
#WikiaPhotoGalleryFeedInUse,
#WikiaPhotoGallerySlideshowFeedInUse,
#WikiaPhotoGallerySlideshowRecentUploads {
	margin: 0 5px 0 0;
}

/* Choose type */
#WikiaPhotoGalleryEditor .WikiaPhotoGalleryEditorChooseType td {
	border: none;
	padding: 15px 0;
	text-align: center;
	vertical-align: top;
}

#WikiaPhotoGalleryEditor .WikiaPhotoGalleryEditorChooseType td.border {
	border-right: solid 1px #ccc;
}

/* Upload */
#WikiaPhotoGalleryEditorUploadTable h1 {
	font-size: 1.8em;
}

/* Search field */
#WikiaPhotoGallerySearch {
	position: absolute;
	right: 13px;
	top: 115px;
	width: 245px;
}

#WikiaPhotoGallerySearch input[type="text"] {
	width: 200px;
}

#WikiaPhotoGallerySearch button {
	*width: 35px; /* IE7 */
}

/* search results */
#WikiaPhotoGallerySearchResultsChooser {
    padding-bottom: 20px;
}

#WikiaPhotoGallerySearchResultsChooser span {
	font-weight: bold;

}

#WikiaPhotoGallerySearchResultsChooser span.clickable {
	cursor: pointer;
	font-weight: normal;
	text-decoration: underline;
}

#WikiaPhotoGallerySearchResults {
	border: solid 1px #aaa;
	height: 260px;
	margin-bottom: 10px;
	overflow: auto;
	position: relative;
}

.WikiaPhotoGalleryResults {
	list-style: none;
}

.WikiaPhotoGalleryResults li {
	float: left;
	margin: 15px;
	padding: 5px;
	position: relative;
}

.WikiaPhotoGalleryResults li.selected {
	border-style: solid;
	border-width: 1px;
	margin: 14px;
}

.WikiaPhotoGalleryResults li label {
	background-position: 50% 50%;
	background-repeat: no-repeat;
	display: block;
	height: 90px;
	width: 120px;
}

.WikiaPhotoGalleryResults li input {
	bottom: 5px;
	position: absolute;
	right: 5px;
}

#WikiaPhotoGallerySearchResultsSelect {
	float: right;
	margin-top: 5px;
}

#WikiaPhotoGallerySearchResults.WikiaPhotoGalleryProgress ul {
	display: none !important;
}

/* upload */
#WikiaPhotoGalleryImageUploadForm {
	height: 25px;
	overflow: hidden;
	position: relative;
}

#WikiaPhotoGalleryImageUpload {
	-moz-opacity: 0;
	filter:alpha(opacity:0);
	opacity: 0;
	position: absolute;
	top: 0;
	width: 175px;
	z-index: 200;
}

#WikiaPhotoGalleryImageUploadButton {
	left: 2px;
	position: absolute;
	top: 2px;
}

#WikiaPhotoGalleryImageUploadForm #WikiaPhotoGalleryUploadProgress {
	position: absolute;
	top: 2px;
	left: 150px;
}

/* Upload conflict */
#WikiaPhotoGalleryEditorConflictTable {
	width: 100%;
}

#WikiaPhotoGalleryEditorConflictTable td {
	border: none;
	text-align: center;
}

#WikiaPhotoGalleryEditorConflictTable h1 {
	border: none;
	font-size: 1.3em;
}

#WikiaPhotoGalleryEditorConflictThumbs td {
	height: 230px;
	vertical-align: middle;
}

/* Photo options */
.WikiaPhotoGalleryEditorPageInner .WikiaPhotoGalleryEditorCaptionWrapper {
	margin-right: 250px;
	position: relative;
}

#WikiaPhotoGalleryLinkEditor,
#WikiaPhotoSlideshowLinkEditor {
	margin-right: 250px;
	margin-top: 50px;
}

#WikiaPhotoGalleryLink,
#WikiaPhotoSlideshowLink,
#WikiaPhotoSlideshowLinkText,
#WikiaPhotoSliderLink,
#WikiaPhotoSliderLinkText,
#WikiaPhotoGalleryEditorCaption {
	width: 99%;
}

#WikiaPhotoGalleryEditorCaptionImagePreview {
	position: absolute;
	right: 15px;
	top: 110px;
}

/* Caption editor toolbar */
#WikiaPhotoGalleryEditorCaptionToolbar {
	position: absolute;
	top: -22px;
}

#WikiaPhotoGalleryEditorCaptionToolbar img {
	cursor: pointer;
}

/* toolbar with Save / Cancel buttons */
#WikiaPhotoGalleryEditor .WikiaPhotoGalleryEditorToolbar a {
	margin-right: 5px;
}

#WikiaPhotoGalleryEditorSave {
	float: right;
}

/* tabs */
#WikiaPhotoGalleryOptionsTabs {
	margin: 10px 0;
	min-height: 150px;
}

#WikiaPhotoGalleryOptionsTabs .WikiaPhotoGalleryOptionsTab {
	display: none;
	padding: 20px 10px;
}

/* slider */
.WikiaPhotoGallerySlider input {
	text-align: center;
	width: 40px;
}

/* color picker */
.WikiaPhotoGalleryColorPicker {
	border: solid 1px #aaa;
	cursor: pointer;
	display: inline-block;
	padding: 1px;
	position: relative;
	vertical-align: middle;
}

.WikiaPhotoGalleryColorPicker span {
	display: block;
	height: 16px;
	width: 16px;
}

.WikiaPhotoGalleryEditorPage .WikiaPhotoGalleryColorPickerPopUp {
	background-color: #fff;
	border: solid 1px #cacaca;
	-moz-box-shadow: 0 0 10px 1px #aaa;
	-webkit-box-shadow: 0 0 10px 1px #aaa;
	display: none;
	position: absolute;
	padding: 5px 10px;
	width: 80px;
	z-index: 2;
}

.ImageOptionTip {
	color: #9f9f9f;
	font-style: italic;
}

.WikiaPhotoGalleryColorPickerPopUp label {
	display: block;
	margin: 5px 0;
}

.WikiaPhotoGalleryColorPickerPopUp input {
	margin: 5px 0;
	width: 70px;
}

.WikiaPhotoGalleryColorPickerPopUp button {
	float: right;
	margin: 5px 0;
}

.WikiaPhotoGalleryColorPickerPopUp hr {
	clear: both;
	width: 70px;
}

.WikiaPhotoGalleryColorPickerPopUp ul {
	margin: 5px 0;
}

.WikiaPhotoGalleryColorPickerPopUp ul li {
	border: solid 1px #aaa;
	float: left;
	margin: 0 5px 5px 0;
	padding: 1px;
}

.WikiaPhotoGalleryColorPicker span.transparent-color, .WikiaPhotoGalleryColorPickerPopUp span.transparent-color{
	background-image: url(../images/colorpicker_transparent.png);
	background-repeat: no-repeat;
}

.WikiaPhotoGalleryColorPickerPopUp ul li, .WikiaPhotoGalleryColorPickerPopUp ul li span {
	height: 16px;
	width: 16px;
}

.WikiaPhotoGalleryColorPickerPopUp ul li.empty {
	border: none;
}

.WikiaPhotoGalleryColorPickerPopUp ul li span {
	cursor: pointer;
	display: block;
}

/* gallery preview */
.WikiaPhotoGalleryEditorPageInner .preview {
	border: solid 1px #aaa;
	height: 240px;
	min-height: 0;
	position: relative;
}

#WikiaPhotoGalleryEditorPreview {
	/*height: 395px;*/
	height: 460px;
}
/* ... */

